--- a/school/templates/school/base.html
+++ b/school/templates/school/base.html
@@ -42,6 +42,14 @@
           font-size: 3.5rem;
         }
       }
+      table, th, td{
+        border: 1px solid black;
+        border-collapse: collapse;
+      }
+      th,td{
+        padding: 5px;
+        text-align: left;
+      }
     </style>
     <!-- Custom styles for this template -->
     
@@ -66,6 +74,10 @@
 
       <li class="nav-item">
         <a class="nav-link" href="{% url 'school:contactus' %}">Contact Us</a>
+      </li>
+
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'school:showscore' %}">showscore</a>
       </li>
 
     </ul>
